sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: value length
		for (i<-2 to length-2)
                             ^